<resources>
    <string name="app_name">group4</string>
    <string-array name="occ">
        <item>Select your Occupation</item>
        <item>Student</item>
        <item>Employee</item>
        <item>Woman</item>
        <item>Physically handicapped</item>
        <item>Government Servant</item>
        <item>Senior Citizen</item>
    </string-array>
    <string-array name="govids">
        <item>Select Your Government ID</item>
        <item>Voter ID</item>
        <item>PAN Card</item>
        <item>Job Card</item>
        <item>Driving License</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="signup">SIGNUP</string>
    <string name="emailsign">Email*</string>
    <string name="enter_your_email_xyz_gmail_sign">Enter your email(xyz@gmail)</string>
    <string name="mobile">Mobile*</string>
    <string name="_91_enter_your_mobile_number">+91 (Enter your Mobile Number)</string>
    <string name="password_sign">Password*</string>
    <string name="enter_your_password_lohin">Enter your Password</string>
    <string name="confirm_password">Confirm Password*</string>
    <string name="signupbtn">Signup</string>
    <string name="i_agree_to_terms_and_conditions">I agree to terms and conditions *</string>
    <string name="login">LOGIN</string>
    <string name="email">Email*</string>
    <string name="enter_your_email_xyz_gmail">Enter your email(xyz@gmail)</string>
    <string name="password">Password*</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="forget_password">FORGET PASSWORD?</string>
    <string name="loginbtn">Login</string>
    <string name="don_t_have_an_account_signup">DON\'T HAVE AN ACCOUNT? SIGNUP</string>
    <string name="please_register_your_detail_for_register_as_sitilink_user">Please Register Your Detail for Register as Sitilink User</string>
    <string name="full_name">Full Name*</string>
    <string name="enter_your_full_name_as_per_gov_id">Enter your full name(As per gov. id)</string>
    <string name="email_user">Email*</string>
    <string name="enter_your_email_xyz_gmail_user">Enter your email(xyz@gmail)</string>
    <string name="date_of_birth">Date of Birth*</string>
    <string name="enter_your_birthdate_dd_mm_yyyy">Enter your Birthdate(dd/mm/yyyy)</string>
    <string name="gender">Gender*</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="adhar_card">Adhar Card*</string>
    <string name="xxxx_xxxx_xxxx">XXXX XXXX XXXX</string>
    <string name="government_id">Government ID* [eg.VoterID(NHIxxxxxxx)]</string>
    <string name="voterid_pan_card_job_card_driving_license">VoterID/PAN card/Job Card/Driving License</string>
    <string name="your_occupation">Your Occupation*</string>
    <string name="password_user">Password*</string>
    <string name="enter_your_password_user">Enter your Password</string>
    <string name="i_agree_to_terms_and_conditions_user">I agree to terms and conditions *</string>
    <string name="register_user">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_reset">Email*</string>
    <string name="reset_btn">RESET</string>
    <string name="enter_your_email_xyz_gmail_reset">Enter your email(xyz@gmail)</string>
    <string name="todo">TODO</string>
    <string name="todo_1">TODO</string>
    <string name="todo_2">TODO</string>
    <string name="bus_route_map">Bus route Map</string>
    <string name="feedback">Feedback</string>
    <string name="location">Location</string>
    <string name="route">Route</string>
    <string name="ticket">Ticket</string>
    <string name="todo_3">TODO</string>
    <string name="user_home">User</string>
    <string name="todo_4">TODO</string>
    <string name="todo_5">TODO</string>
    <string name="todo_6">TODO</string>
    <string name="todo_7">TODO</string>
    <string name="search_route">SEARCH ROUTE</string>
    <string name="generate">Generate</string>
    <string name="pay_for_ticket">PAY FOR TICKET</string>
    <string name="your_name">Your Name</string>
    <string name="upiid">upiID</string>
    <string name="amount">Amount</string>
    <string name="note">Note</string>
    <string name="pay_now">Pay Now</string>
    <string name="todo_8">TODO</string>
    <string name="name_header">Name</string>
    <string name="email_header">Email</string>
    <string name="profile_drawer">Profile</string>
    <string name="logout_drawer">Logout</string>
    <string name="favourite_trips_drawer">Favourite trips</string>
    <string name="share_this_app">Share this App</string>
    <string name="send_email_drawer">Send Email</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="change_profile">Show Profile</string>
    <string name="communicate">Communicate</string>
    <string name="search_list">Search</string>
    <string name="string_search_list" />
    <string name="feedback_st">FEEDBACK</string>
    <string name="submit_feedback">SUBMIT FEEDBACK</string>
    <string name="userid">User id*</string>
    <string name="enter_user_id">Enter UserID</string>
    <string name="changeprof">YOUR PROFILE</string>
    <string name="useridprof">Your userID</string>
    <string name="emaiprof">Your Email</string>
    <string name="mobileprof">Your Mobile No.</string>
    <string name="passwordprof">Your Password</string>
    <string name="enter_source_location">Enter Source Location</string>
    <string name="enter_destination_location">Enter Destination Location</string>
    <string name="display_track">display track</string>
    <string name="search_route_act">SEARCH ROUTE</string>
    <string name="busnumber">busnumber</string>
    <string name="buspath">buspath</string>
    <string name="your_review">Your Review</string>
    <string name="zeroone">\n
        -Chandra Shekhar Azad Bridge Approach Katargam\n
        -Katargam Darvaja BRT \n
        -Gotalawadi  \n
        -Kabir Mandir Rampura \n
        -Railway Station Terminal \n
        -Linear Bus Stop \n
        -Golden Point \n
        -Sahara Darvaja \n
        -Texttile Market\n
        -Kamela Darvaja\n
        -Kinnary Cinema\n
        -Maan Darvaja \n
        -Udhana Darvaja BRTS\n
        -Kharvarnagar BRTS \n
        -Sub Jail\n
        -New Civil Hospital\n
        -Majura Gate \n
        -Gandhi Collage\n
        -Vanita Vishram Ground\n
        -Atwagate\n
        -Swaminarayan chowk BRTS\n
        -Adajan Patiya BRTS\n
    </string>
    <string name="zerotwo">\n
        - Adajab Patiya Brts\n
        - Swaminarayan Chowk Brts\n
        - Athwagate\n
        - Vanita Vishram Ground\n
        - Gandhi College\n
        - Majura Gate\n
        - New Civil Hospital\n
        - Sub Jail\n
        - Udhana Darwaja Brts\n
        - Khawarnagar Brts\n
        - Maan Darawaja\n
        - Kinnary Cinema\n
        - Textile Market\n
        - Sahara Darwaja\n
        - Golden Point\n
        - Linear Bus Stop\n
        - Railway Station Terminal\n
        - Lal Daewaja\n
        - Kabir Mandir Rampura\n
        - Gotalawadi\n
        - Katargam Darwaja BRT\n
        - Chandra Shekhar Azad Bridge Approach Katargam\n
    </string>
    <string name="fivezerofour">\n
        -Puna Canal BRTS \n
        -Magob Gam BRTS \n
        -Parvat Patiya Junction BRTS \n
        -Model Town Dumbhal \n
        -Dumbhal Fire Station \n
        -Narayan Industries Limbayat \n
        -Nageshwar Temple \n
        -Sanjay Nagar Limbayat \n
        -Sahajanand Society Limbayat \n
        -Godadra Canal Junction \n
        -Jai Jogani Mata Chowk BRTS \n
        -Aaspas Dada Temple BRTS \n
        -Mangal Pandey Hall BRTS \n
        -Maharana Pratap Bridge  Sai Baba Temple, Dindoli BRTS \n
        -Dindoli Gam \n
        -Mark Point Dindoli \n
        -Shreenath Residency \n
        -Karadva Gam \n
        -Bhestan Ews Housing \n
        -Unn \n
        -Unn Naka BRTS \n
        -Maulana Azad English School \n
        -Unn Gam \n
        -Reshma Nagar \n
        -Swapna Srusti Residency \n
    </string>
    <string name="fivezerosix">\n
        -SDJain School Vesu \n
        -Suraj Mandal Jain Temple \n
        -Vatsalya Bungalows \n
        -Someshwar Junction BRTS \n
        -VNSG University \n
        -V.N.S.G.U. Convention Hall BRTS \n
        -Centre for Social Studies BRTS \n
        -Anuvrat Dwar Junction (West) BRTS \n
        -Chandramani Society Udhana Magdalla Road \n
        -Brieadliner Circle Udhana Magdalla Road \n
        -Vishal Society Udhana Magdalla Road \n
        -Bhatar Flyover Udhana Magdalla Road \n
        -Ishwar Nagar Udhana Magdalla Road \n
        -Gandhikutir Junction Udhana Magdalla Road \n
        -Navjivan Circle Udhana Magdalla Road \n
        -Somnath Society Udhana Magdalla Road \n
        -Sosyo Circle Udhana Magdalla Road \n
        -Khatodara Water Works \n
        -Khatodara Police Station \n
        -Kharwarnagar BRTS \n
        -Satyanagar BRTS \n
        -Udhana Teen Rasta BRTS \n
        -Mastannagar \n
        -Laxminagar \n
        -Udhana Udhyog Nagar \n
        -S.M.C. Sankul \n
        -Umiya Nagar \n
        -Laxminagar Society \n
        -Dindoli Gam \n
        -Ghardi Mata Mandir \n
        -Shivalik Square \n
    </string>
    <string name="fouronezero">\n
        - DGVCL Mota Varachha\n
        - Santosa Heights\n
        - Oprea City\n
        - Slok Residency\n
        - Maharaja Krushnakumar School\n
        - Royal Square\n
        - Utran Power House\n
        - Samta Nagar\n
        - Mota Varachha Pumping Station\n
        - Apple Heights \n
        - Sudama Chowk\n
        - Mota Varachha Fire Station\n
        - Mota Varachha Ward Office\n
        - Mota Varachha Prathmik School\n
        - Sewage Pumping Mota Varachha\n
        - Rajhans Tower\n
        - Lajamani Chowk\n
        - Savjikorat Bridge\n
        - Natvar Nagar\n
        - Sarthana Nature Park BRTS\n
        - Sarthana Naka\n
        - Simada Varigruh\n
        - Vraj Chowk\n
        - Vrajvilla Society Shayamnagar\n
        - Simada Gam \n
        - Patel Park\n
        - Yogi Nagar\n
        - Raghukul Residency\n
        - Radhe Residency\n
        - Savaliya Circle\n
        - Vrundavan Society Puna\n
        - Pramukhchhaya\n
        - Balaji Residency\n
        - Bhagwati Society\n
        - Laxminagar Chowk\n
        - BSNL Office Mamta Park\n
        - Sagar Society\n
        - Gopal Chowk\n
        - Rachana Society\n
        - Rachna Circle\n
        - Shree Swami Dayanand Sarswati Bridge\n
        - Silver Palace  \n
        - Community Hall Utran\n
        - Omkar Row House\n
    </string>
    <string name="fourzerothree">\n
        -Sanjay Nagar Circle \n
        -Sanjay Nagar Limbayat \n
        -Sahajanand Society Limbayat \n
        -Silicon Flats Parvat \n
        -Parvat Gam \n
        -Vidhata Township Parvat \n
        -Neminath Nagar Dumbhal \n
        -Model Town Dumbhal \n
        -Parvat Patiya Junction BRTS \n
        -Amazia Amusement Park BRTS \n
        -Sitanagar BRTS \n
        -Sita Nagar \n
        -Punagam Sarkari Mandli \n
        -Puna Talav \n
        -Shaarda Vidhya Mandir \n
        -Kargil Chowk Puna \n
        -Thakordwar Society \n
        -Bhagwati Society \n
        -Anupam Business Hub \n
        -Yogi Chowk \n
        -City Civic Centre Yogi \n
        -Mahavir Chowk \n
        -Varacha Chowpati F.O.B \n
        -Tapovan Circle \n
        -Nana Varachha Vari Gruh BRTS \n
        -Maharana Pratap Garden (Chowpati) BRTS \n
        -Nana Varachha Police Station BRTS \n
        -Sarthana Nature Park BRTS \n
        -Anmol Park Society \n
    </string>
</resources>