<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/logout"
            android:title="@string/logout_drawer"
            android:icon="@drawable/ic_logout"/>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/favtrip"
            android:title="@string/favourite_trips_drawer"
            android:icon="@drawable/ic_favtrip"/>
    </group>
        <group android:checkableBehavior="single">
        <item
            android:id="@+id/eml"
            android:title="@string/send_email_drawer"
            android:icon="@drawable/ic_email"/>
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/share"
            android:title="@string/share_this_app"
            android:icon="@drawable/ic_share"/>
    </group>
</menu>