<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3D56B2"
    tools:context=".forgetpsw">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="254dp"
        android:background="#CDDEFF"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_reg_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColorHighlight="#14279B"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_reg_head"
            android:layout_marginTop="0dp"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:text="@string/email_reset"
            android:textColor="#555555"
            android:textSize="16sp"
            tools:ignore="TextViewEdits,TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/et_reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_email"
            android:autofillHints=""
            android:background="@drawable/border"
            android:hint="@string/enter_your_email_xyz_gmail_reset"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/reg_submit"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_reg_email"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="122dp"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="110dp"
            android:layout_marginRight="11dp"
            android:layout_marginBottom="11dp"
            android:backgroundTint="#000957"
            android:textColor="#FFFFFF"
            android:text="@string/reset_btn" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>